--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,36 +4,33 @@ site_description: The Cocos2d-x Programmers Guide
 site_description: The Cocos2d-x Programmers Guide
 site_author: The Cocos2d-x Team
 pages:
-- [index.md, 'Index']
-- [1.md, 'Ch 1: About Cocos2d-x']
-- [2.md, 'Ch 2: Basic Concepts']
-- [3.md, 'Ch 3: Sprites']
-- [4.md, 'Ch 4: Actions']
-- [5.md, 'Ch 5: Scenes']
-- [6.md, 'Ch 6: UI']
-- [7.md, 'Ch 7: Other Node Types']
-- [8.md, 'Ch 8: Event Dispatch']
-- [9.md, 'Ch 9: 3D']
-- [10.md, 'Ch 10: Lua']
-- [11.md, 'Ch 11: Services']
-- [12.md, 'Ch 12: Physics']
-- [13.md, 'Ch 13: Audio']
-- [14.md, 'Ch 14: Advanced Topics']
-- [A.md, 'Appx A: Prerequisites']
-- [B.md, 'Appx B: Android (Terminal) Setup']
-- [C.md, 'Appx C: Android (Eclipse) Setup']
-- [D.md, 'Appx D: iOS Setup']
-- [E.md, 'Appx E: Mac OSX Setup']
-- [F.md, 'Appx F: Linux Setup']
-- [G.md, 'Appx G: Windows Setup']
-- [H.md, 'Appx H: Windows Phone Setup']
-- [I.md, 'Appx I: Command-Line Integration']
+- 'Index': 'index.md'
+- 'Ch 1 - About Cocos2d-x': '1.md'
+- 'Ch 2 - Basic Concepts': '2.md'
+- 'Ch 3 - Sprites': '3.md'
+- 'Ch 4 - Actions': '4.md'
+- 'Ch 5 - Scenes': '5.md'
+- 'Ch 6 - UI': '6.md'
+- 'Ch 7 - Other Node Types': '7.md'
+- 'Ch 8 - Event Dispatch': '8.md'
+- 'Ch 9 - 3D': '9.md'
+- 'Ch 10 - Lua': '10.md'
+- 'Ch 11 - Services': '11.md'
+- 'Ch 12 - Physics': '12.md'
+- 'Ch 13 - Audio': '13.md'
+- 'Ch 14 - Advanced Topics': '14.md'
+- 'Appx A - Prerequisites': 'A.md'
+- 'Appx B - Android (Terminal) Setup': 'B.md'
+- 'Appx C - Android (Eclipse) Setup': 'C.md'
+- 'Appx D - iOS Setup': 'D.md'
+- 'Appx E - Mac OSX Setup': 'E.md'
+- 'Appx F - Linux Setup': 'F.md'
+- 'Appx G - Windows Setup': 'G.md'
+- 'Appx H - Windows Phone Setup': 'H.md'
+- 'Appx I - Command-Line Integration': 'I.md'
 
-base_url: ./
 theme: readthedocs
 theme_dir: 'theme'
 copyright: Copyright &copy; 2014-2015, Chukong Technology
-enable_search: true
 use_directory_urls: false
 repo_url: https://github.com/chukong/programmers-guide
-search_index: ./
